--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
 <div class="row d-flex align-center ">
 <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3">
-        <a href="https://https://web3favela.netlify.app/" class="brand">
+        <a href="https://web3favela.netlify.app/" class="brand">
                <!-- <img src="https://cdn.sonicadigital.com.br/play4change/storage/settings/1/original-62b9bb1277631.png" class="img-responsive shown" alt="Play4Change">
                 <img src="https://cdn.sonicadigital.com.br/play4change/storage/settings/1/original-62b9bb12cc901.png" class="img-responsive hidden" alt="Play4Change">
                 -->
