--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Ver mais
         
         Complexo do Chapadão, zona norte do Rio de Janeiro.
         </p>
-        <img class="col-xs-12 item middle" class="col-xs-12 item middle" src="imagens/alunos.png" alt="">
+        <img class="mcol-xs-12 col-sm-6 col-sm-push-6 item middle" class="col-xs-12 item middle" src="imagens/alunos.png" alt="">
 </div>
 </div>
 </div>
