--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 <div class="row group lg">
 <div class="col-xs-12 item middle">
 <div class="text-left text-large ">
-<h2 class="title   text-left  ">Web3.Favela</h2>
-<p>Inclusão financeira<br />
-Capacitação educacional<br />
+<h2 class="title   text-left  ">Web3 Favela</h2>
+<p>Inclusão Financeira<br />
+Capacitação Educacional e<br />
 Transformação Social<br />
 Através da Web3</p>
 </div>
@@ -178,15 +178,9 @@ Através da Web3</p>
 <div class="col-xs-12 col-sm-6 col-sm-pull-6 item middle info-box">
 <div class="text-center text-normal">
 <h2 class="title   text-center   default ">Web3.Favela</h2>
-<p>PROPÓSITO<br />
+<p>MISSÃO<br />
 <br />
-Ser ponte entre jovens
-periféricos e a tecnologia,
-empoderando e gerando
-portunidade, através de trilhas
-de aprendizagens em técnologia
-web3, sendo o primeiro curso do
-tema para favelas.<br />
+Ser ponte entre jovens periféricos e a tecnologia, empoderando e gerando oportunidades através de trilhas de aprendizagens práticas em tecnologia e suas aplicações em web3, sendo referência do tema em favelas.<br />
 <br />
 <!--As DAOs de impacto são essencialmente organizações criadas para trazer um impacto em questões onde a sociedade já sofre grandes perdas. Elas visam impulsionar interesses compartilhados e necessidades comuns.</p>
 
@@ -204,7 +198,7 @@ Ver mais
 <div class="row group lg">
 <div class="col-xs-12 item middle">
 <div class="text-center text-small ">
-<h2 class="title  underline   text-center   default ">COMO FUNCIONA</h2>
+<h2 class="title  underline   text-center   default ">NOSSOS PILARES</h2>
 </div>
 </div>
 </div>
@@ -220,8 +214,7 @@ Ver mais
 </div>
 <div class="right">
 <h3 class="title  underline  text-center  default ">Inclusão Digital</h3>
-<p>Tem como objetivo promover a formação base
-        para se iniciar a jornada tecnológica, nesta trilha o foco será conceitos básicos de informática e internet wb2.
+<p>Promover a formação base para iniciar a jornada tecnológica com quebra de barreiras de entrada a aprendizagem.
         </p>
 </div>
 </div>
@@ -233,7 +226,7 @@ Ver mais
 </div>
 <div class="right">
 <h3 class="title  underline   text-center  default ">Aprendizagem profissional</h3>
-<p>Terão como principal objetivo possibilitar a inserção de jovens no mercado de trabalho através de formações tech.</p>
+<p>Garantir o ensino de qualidade e com profissionais capacitados para conduzir de maneira imersiva o desenvolvimento das competências técnicas e comportamentais das profissões mais requisitadas do mercado.</p>
 </div>
 </div>
 </div>
@@ -242,10 +235,10 @@ Ver mais
 <div class="left">
 <i class="icon fas fa-bullhorn   icon-small   icon-text "></i>
 </div>
-<!--<div class="right">
-<h3 class="title  underline   text-center  default ">Desigualdade social</h3>
-<p>Os 50% mais pobres possuem 2%, enquanto os 10% mais ricos detêm 76% de toda a riqueza mundial.</p>
- </div> -->
+<div class="right">
+<h3 class="title  underline   text-center  default ">Mão na Massa</h3>
+<p>Prezamos pelo ensino através de atividades práticas, tornado mais real e palpável a participação dentro da profissão e com desenvolvimento real das skills do profissional.</p>
+ </div>
 </div>
 </div>
 </div>
