--- a/index.html
+++ b/index.html
@@ -437,13 +437,14 @@ Ver mais
 </div>
 </div>
 </footer>
-<footer class="footer-developer">
-<!--<div class="container text-center">
+<!--<footer class="footer-developer">
+<div class="container text-center">
 <p class="dev">
 Acelerado com <a href="http://sonica.digital/?company=Play4Change&solution=block" target="_blank" rel="nofollow"><img src="https://www.play4change.io/img/default/logo.png" alt="Sonica"></a>
 </p>
-</div> -->
-</footer> <div class="contacts">
+</div> 
+</footer> --> 
+<div class="contacts">
 </div>
 </div>
 <script src="https://www.play4change.io/js/manifest.js"></script>
